# cpp-data-engine

./: CMakeLists.txt  test.csv  test2.csv  test_python.py
include/: csv_reader.h  operations.h  pipeline.h  row.h
src/: bindings.cpp  csv_reader.cpp  main.cpp  operations.cpp  pipeline.cpp
